[gd_scene load_steps=20 format=3 uid="uid://cop7ljq1jp0hy"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_b6dru"]
[ext_resource type="Texture2D" uid="uid://c1gn5kgockhx3" path="res://Assets/images/pig01.png" id="2_vchdc"]
[ext_resource type="Texture2D" uid="uid://b4lakopkl2i24" path="res://Assets/images/tile_01.png" id="3_m3sq6"]
[ext_resource type="Script" path="res://Escenas/num_pad_grid.gd" id="3_np8u7"]
[ext_resource type="Texture2D" uid="uid://bkixwvg2lol8x" path="res://Assets/images/tile_02.png" id="4_h7rbn"]
[ext_resource type="Texture2D" uid="uid://7xj55uks2yog" path="res://Assets/images/tile_03.png" id="5_hsfa4"]
[ext_resource type="Texture2D" uid="uid://jwa3dbrxn2oi" path="res://Assets/images/tile_04.png" id="6_hm2ro"]
[ext_resource type="Texture2D" uid="uid://db0wb6pi0vs2a" path="res://Assets/images/tile_05.png" id="7_uxy2i"]
[ext_resource type="Texture2D" uid="uid://dohrwh0dnocnv" path="res://Assets/images/tile_06.png" id="8_becbx"]
[ext_resource type="Texture2D" uid="uid://dcomd8wptvrm8" path="res://Assets/images/tile_07.png" id="9_e5cka"]
[ext_resource type="Texture2D" uid="uid://b5r815c0lsbt3" path="res://Assets/images/tile_08.png" id="10_viskm"]
[ext_resource type="Texture2D" uid="uid://o2l4qfj5520k" path="res://Assets/images/tile_09.png" id="11_qtfsh"]
[ext_resource type="Texture2D" uid="uid://d1xwg5k0mdbtt" path="res://Assets/images/tile_00.png" id="12_r3xpn"]
[ext_resource type="AudioStream" uid="uid://c0jjpbr7l7bvu" path="res://Assets/sounds/beep02.ogg" id="14_sym2a"]
[ext_resource type="AudioStream" uid="uid://c4otbut6c2dkg" path="res://Assets/sounds/teclado-mac1.ogg" id="15_ud76q"]
[ext_resource type="AudioStream" uid="uid://cv37sn377y05s" path="res://Assets/sounds/teclas.ogg" id="16_dvh4w"]
[ext_resource type="AudioStream" uid="uid://cysqnposqwh0k" path="res://Assets/sounds/ui-pop.ogg" id="17_bx5yy"]
[ext_resource type="AudioStream" uid="uid://bhuyo71o6c451" path="res://Assets/sounds/newchaching.ogg" id="18_e7fsc"]

[sub_resource type="GDScript" id="GDScript_kqslo"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6dru")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(540, 960)
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0
color = Color(0.219608, 0.137255, 0.294118, 0.788235)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 134.0
offset_top = 697.0
offset_right = -134.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vchdc")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_right = 2.0
offset_bottom = 961.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "CALCULADORA DE AHORROS
"
vertical_alignment = 1

[node name="Instrucciones" type="Label" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "1 - Elige, de a uno, el valor de la moneda o billete que quieres calcular. 
2 - Luego escribe la cantidad y dale al botón SUMAR. 
3 - Repite el proceso. 
4 - El resultado aparecerá en la barriga del cerdito."
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "- - - - - Monedas - - - - -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 4

[node name="CBOneCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "1 cent"
script = SubResource("GDScript_kqslo")

[node name="CBTwoCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "2 cent"

[node name="CBFiveCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "5 cent"

[node name="CBTenCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "10 cent"

[node name="CBTwentyCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "20 cent"

[node name="CBFiftyCent" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "50 cent"

[node name="CBOneEuro" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "1 €"

[node name="CBTwoEuro" type="CheckBox" parent="VBoxContainer/CoinsGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "2 €"

[node name="BillLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "- - - - -  Billetes  - - - - -
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BillGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="CBFiveEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "5 €"

[node name="CBTenEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "10 €"

[node name="CBTwentyEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "20 €"

[node name="CBFiftyEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "50 €"

[node name="CBOneHundredEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "100 €"

[node name="CBTwoHundredEuro" type="CheckBox" parent="VBoxContainer/BillGrid"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "200 €"

[node name="Label5" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Selecciona la cantidad de billetes o monedas:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumPadGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3
script = ExtResource("3_np8u7")

[node name="Button" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("3_m3sq6")
expand_icon = true

[node name="Button2" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("4_h7rbn")
expand_icon = true

[node name="Button3" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("5_hsfa4")
expand_icon = true

[node name="Button4" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("6_hm2ro")
expand_icon = true

[node name="Button5" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("7_uxy2i")
expand_icon = true

[node name="Button6" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("8_becbx")
expand_icon = true

[node name="Button7" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("9_e5cka")
expand_icon = true

[node name="Button8" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("10_viskm")
expand_icon = true

[node name="Button9" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("11_qtfsh")
expand_icon = true

[node name="Button11" type="Button" parent="VBoxContainer/NumPadGrid"]
layout_mode = 2
disabled = true
flat = true

[node name="Button10" type="Button" parent="VBoxContainer/NumPadGrid"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 14
toggle_mode = true
button_pressed = true
icon = ExtResource("12_r3xpn")
icon_alignment = 1
expand_icon = true

[node name="Button12" type="Button" parent="VBoxContainer/NumPadGrid"]
layout_mode = 2
disabled = true
flat = true

[node name="SumaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_pressed = true
text = "      SUMA      "

[node name="Msg01" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
horizontal_alignment = 1

[node name="Msg02" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
horizontal_alignment = 1

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_sym2a")
volume_db = -12.418

[node name="TecladoMac1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ud76q")
volume_db = 21.214

[node name="Teclas" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_dvh4w")

[node name="UiPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_bx5yy")

[node name="ChaChing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_e7fsc")
volume_db = -16.04

[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBOneCent" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBOneCent" to="." method="_on_cb_one_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBTwoCent" to="." method="_on_check_box_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBTwoCent" to="." method="_on_cb_two_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBFiveCent" to="." method="_on_cb_five_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBFiveCent" to="." method="_on_check_box_3_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBTenCent" to="." method="_on_cb_ten_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBTwentyCent" to="." method="_on_cb_twenty_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBFiftyCent" to="." method="_on_cb_fifty_cent_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBOneEuro" to="." method="_on_cb_one_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/CoinsGrid/CBTwoEuro" to="." method="_on_cb_two_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBFiveEuro" to="." method="_on_cb_five_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBTenEuro" to="." method="_on_cb_ten_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBTwentyEuro" to="." method="_on_cb_twenty_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBFiftyEuro" to="." method="_on_cb_fifty_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBOneHundredEuro" to="." method="_on_cb_one_hundred_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/BillGrid/CBTwoHundredEuro" to="." method="_on_cb_two_hundred_euro_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="VBoxContainer/NumPadGrid/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="VBoxContainer/SumaButton" to="." method="_on_suma_button_pressed"]
